plugins {
    id 'com.android.application'
}

android {
    namespace = 'com.trigpointinguk.android'
    compileSdk = 36

    defaultConfig {
        applicationId "com.trigpointinguk.android"
        minSdk = 27
        targetSdk = 36
        versionCode 11
        versionName "2.0.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    
    lint {
        disable 'MissingTranslation'
    }
    
    // Make source sets explicit so IDEs reliably detect classpath
    sourceSets {
        main {
            manifest.srcFile 'src/main/AndroidManifest.xml'
            java.srcDirs = ['src/main/java']
            res.srcDirs = ['src/main/res']
            assets.srcDirs = ['src/main/assets']
        }
        androidTest {
            java.srcDirs = ['src/androidTest/java']
        }
        test {
            java.srcDirs = ['src/test/java']
        }
    }
    
    // Removed deprecated excludes; rely on default packaging behavior
}

// Ensure JDK 17 toolchain is used (required by AGP 8.x)
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.preference:preference:1.2.1'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'androidx.viewpager2:viewpager2:1.1.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'
    implementation 'androidx.browser:browser:1.8.0'
    
    // HTTP client
    implementation 'com.squareup.okhttp3:okhttp:5.1.0'
    
    // Logging - replacing slf4j-android-1.6.1-RC1.jar
    implementation 'org.slf4j:slf4j-android:1.7.36'
    
    // ACRA for crash reporting - replacing acra-4.2.3.jar
    
    // Maps - we'll need to replace the old maps.jar with Google Maps
    implementation 'com.google.android.gms:play-services-maps:19.2.0'
    implementation 'com.google.android.gms:play-services-location:21.3.0'
    
        
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
}

